Flask app can now take a string to predict, and display results, but only the first time (consecituve tried raise tensorflow error)

--- a/templates/predict.html
+++ b/templates/predict.html
@@ -9,6 +9,8 @@
          <p>Enter variable:</p>
          <p><input type = "text" name = "var" /></p>
          <p><input type = "submit" value = "submit" /></p>
+         <p><input type="reset" value="Reset"/></p>
       </form>
+    <p>{{prediction}}</p>
 </body>
 </html>
