--- a/templates/predict.html
+++ b/templates/predict.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Matching scientific variables</title>
+    <style>
+        body { font-size: 14px; font-family: Verdana; color: gray;}
+        .label {color: blue;}
+        #variable {color: pink;}
+        input { border: dotted 3px blue;}
+
+    </style>
 </head>
 <body>
     <form action = "http://localhost:5000/predict" method = "POST">
-         <p>Enter variable:</p>
+         <p id="variable">Enter variable:</p>
          <p><input type = "text" name = "var" /></p>
          <p><input type = "submit" value = "submit" /></p>
-         <p><input type="reset" value="Reset"/></p>
       </form>
     <p>{{prediction}}</p>
 </body>
