Fixed app prediction to display strings in the array only (no accompanying number as it's unecessary with a numbered list

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
                 <li>
                     <p>
                     <ol>
-                        {% for vocab in element %}
+                        {% for num, vocab in element %}
                         <li>
                             {{vocab}}
                         </li>
