--- a/templates/index.html
+++ b/templates/index.html
@@ -8,10 +8,13 @@
         .label {color: blue;}
         variable {color: green;}
         input { border: lined 3px blue;}
+        form { text-align: center}
+        h1 { text-align:center }
 
     </style>
 </head>
 <body>
+    <h1>Welcome to matching scientific variables using machine learning</h1>
     <form action = "http://localhost:5000/predict" method = "POST">
          <p id="variable">Enter variable:</p>
          <p><input type = "text" name = "var" /></p>
@@ -32,5 +35,12 @@
         </li>
     {% endfor %}
     </ul>
+    <p>Not happy with the result? Would you like to add your input to the training set to improve these predictions?</p>
+        <form action = "http://localhost:5000/submit" method = "POST">
+            <p>Enter your variable (split on property and unit):</p>
+            <p><input type = "text" name = "property" placeholder="property"/></p>
+            <p><input type = "text" name = "unit" placeholder="unit"/></p>
+            <p><input type = "submit" value = "submit" /></p>
+        </form>
 </body>
 </html>
