--- a/templates/submit.html
+++ b/templates/submit.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <style>
+        select { display:inline-block; }
+    </style>
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Submit my input</title>
 </head>
 <body>
         <form action = "http://localhost:5000/submit" method = "POST">
             <p>Enter your variable (split on property and unit):</p>
-            <p><input type = "text" name = "user_property" placeholder="eg. air temperature"/>Property</p>
-            <p><input type = "text" name = "user_unit" placeholder="eg. degree celsius"/>Unit</p>
-            <p><input type = "submit" value = "submit_for_ingestion" /></p>
+            <p>Property <input type = "text" name="user_property" placeholder="eg. air temperature"/></p>
+            <p>Unit <input type = "text" name="user_unit" placeholder="eg. degree celsius"/></p>
+            <p><input type = "submit" name="submit_for_ingestion" value="Submit"/></p>
 
             <p>Select their classes:</p>
-            <select name="class_property" size="20"> {% for property in properties}
-                <option value="{{ property }}">{{ property }}</option>
-                {% endfor %}
-            </select>
-            <p></p>
-            <select name="class_unit" size="20"> {% for unit in units}
-                <option value="{{ unit }}">{{ unit }}</option>
-                {% endfor %}
-            </select>
+                <select name="class_property" size="20"> {% for property in properties %}
+                    <option value="{{ property }}">{{ property }}</option>
+                        {% endfor %}
+                </select>
+                <select class="select" name="class_unit" size="20"> {% for unit in units %}
+                    <option value="{{ unit }}">{{ unit }}</option>
+                        {% endfor %}
+                </select>
         </form>
 </body>
 </html>
