--- a/templates/submit.html
+++ b/templates/submit.html
@@ -3,6 +3,7 @@
 <head>
     <style>
         select { display:inline-block; }
+        .message { color: blue }
     </style>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Submit my input</title>
@@ -14,15 +15,18 @@
             <p>Unit <input type = "text" name="user_unit" placeholder="eg. degree celsius"/></p>
 
             <p>Select their classes:</p>
+             <!--<b>Properties</b>-->
                 <select name="class_property" size="20"> {% for property in properties %}
                     <option value="{{ property }}">{{ property }}</option>
                         {% endfor %}
                 </select>
+            <!--<h3 class="select">Units</h3>-->
                 <select class="select" name="class_unit" size="20"> {% for unit in units %}
                     <option value="{{ unit }}">{{ unit }}</option>
                         {% endfor %}
                 </select>
             <p><input type = "submit" name="submit_for_ingestion" value="Submit"/></p>
         </form>
+        <p class="message">{{ message }} </p>
 </body>
 </html>
