--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,9 @@
                         {% for key, value in dataframe[1].iterrows() %}
                             <li>
                             {% if 'p' in dataframe[0] %}
-                                <a href="{{ value['url'] }}">{{ value['proper_name'] }}</a>
+                                {% if value['url'] is not number %} <a href="{{ value['url'] }}">
+                                {% endif %}
+                                {{ value['proper_name'] }}</a>
                                 {%if suggested_units==True %}
                                     {% if value['suggested_unit'] is not number %}
                                         in
@@ -42,10 +44,13 @@
                                     {% endif %}
                                 {% endif %}
                             {% elif 'u' in dataframe[0] %}
-                                {% if value['url'] %}
-                                    <a href="{{ value['url'] }}">
-                                        {% endif %}
-                                        {{ value['proper_name'] }} ({{ value['abbreviation']}})</a>
+                                {% if value['url'] is not number %} <a href="{{ value['url'] }}">
+                                {% endif %}
+                                {{ value['proper_name'] }}
+                                {% if value['abbreviation'] is not number%}
+                                    ({{ value['abbreviation']}})
+                                {% endif %}
+                                </a>
                             {% endif %}
                             </li>
                         {% endfor %}
