Changed title in submit template and started a user_guide in jupyter notebook

--- a/templates/submit.html
+++ b/templates/submit.html
@@ -6,7 +6,7 @@
         .message { color: blue }
     </style>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Submit my input</title>
+    <title>Submit input</title>
 </head>
 <body>
         <form action = "http://localhost:5000/submit" method = "POST">
