--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -17,8 +17,8 @@
     <h1>Matching Scientific Variables using Machine Learning</h1>
     <form action = "/predict" method = "POST">
          <p id="variable">Enter variable:</p>
-         <p><input type = "text" name = "var" /></p>
-         <p><input type = "submit" value = "Predict" name="submit_for_prediction"/></p>
+         <p><input type = "text" name = "var" placeholder="eg. temp in deg c" /></p>
+         <p><input type = "submit" value = "Predict" name="submit_for_prediction" /></p>
       </form>
     <p>Best guesses:</p>
     {% if no_prediction %}
